--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "@adonisjs/core": "^6.9.0",
     "@adonisjs/cors": "^2.2.1",
     "@adonisjs/lucid": "^20.6.0",
+    "@adonisjs/validator": "^13.0.2",
     "@vinejs/vine": "^2.0.0",
     "better-sqlite3": "^10.0.0",
     "luxon": "^3.4.4",
