--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "@adonisjs/validator": "^13.0.2",
     "@vinejs/vine": "^2.0.0",
     "better-sqlite3": "^10.0.0",
+    "express": "^4.19.2",
     "luxon": "^3.4.4",
     "reflect-metadata": "^0.2.2"
   },
